Add answers to the RQs in results.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -143,17 +143,18 @@ get the best possible user experience. We then asses these
 optimizations and the compromises that had to be made.
 
 \section{Research Questions}
+\label{section:research-questions}
 
 Knowing the reasons and motivation for cross-platform HTML5 and the
 importance of application performance and responsiveness:
 
 \begin{itemize}
-\item \textbf{RQ1}: What are the main problem areas in mobile web
-  development?
-\item \textbf{RQ2}: Do HTML5 and related specifications solve these
-  problems?
-\item \textbf{RQ3}: What other practical means do we have to solve
-  these problems?
+\item \textbf{RQ1}: \textit{What are the main problem areas in mobile
+  web development?}
+\item \textbf{RQ2}: \textit{Do HTML5 and related specifications solve
+  these problems?}
+\item \textbf{RQ3}: \textit{What other practical means do we have to
+  solve these problems?}
 \end{itemize}
 
 \chapter{HTML5}
